test/src/parseErrors/ioBody.cl
include node-core

sum a b = a + b


comp = do
    a <- getLine
